--- a/source/_posts/2023-06-09-hexo学习记录.md
+++ b/source/_posts/2023-06-09-hexo学习记录.md
@@ -8,7 +8,8 @@ categories:
 mathjax: true
 abbrlink: d6e1643e
 date: 2023-06-09 21:45:53
-description:
+swiper_index: 2
+description: 使用vscode部署hexo
 ---
 ## vscode启动和部署
 1. 需要先设置vscode权限
