--- a/source/_posts/2023-06-10-blog笔记.md
+++ b/source/_posts/2023-06-10-blog笔记.md
@@ -245,7 +245,7 @@ collect操作可以接受各种方法作为参数，将流中的元素汇集。
 
 #### 登录
 
-![security流程](./2023-06-10-blog%E7%AC%94%E8%AE%B0/securityMethod.png)
+![security流程](./1bb5825a/securityMethod.png)
 
 > ​	①自定义登录接口  
 >
@@ -914,7 +914,7 @@ private CacheManager cacheManaget
 
 #### swaggerApi
 
-![swaggerApi](./2023-06-10-blog%E7%AC%94%E8%AE%B0/swaggerApi.png)
+![swaggerApi](./1bb5825a/swaggerApi.png)
 
 
 
